fix(workshops) align spaces

--- a/_sass/components/workshops.scss
+++ b/_sass/components/workshops.scss
@@ -3,7 +3,7 @@
 
   color: map-get($colors, dark);
   background: map-get($colors, light);
-  padding: 1rem;
+  padding: 25px;
   margin-bottom: 4rem;
 
   &.gradient-box {
@@ -28,7 +28,7 @@
 
   &__logo-container {
     text-align: center;
-    padding: 25px;
+    padding-bottom: 25px;
   }
 
   &__logo {
@@ -36,48 +36,28 @@
     height: 100px;
   }
 
+  &__trainer-container {
+    display: flex;
+    justify-content: space-around;
+    padding: 35px 0 25px 0;
+  }
+
   &__title {
     margin: 0;
     text-align: center;
   }
 
-  &__description {
-    margin: 0;
-  }
-
-  &__details {
-    align-items: flex-end;
-    justify-content: space-between;
-  }
-
-  &__trainer {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-
-    .angular-image {
-      width: 100px;
-      height: 100px;
-    }
-
-    .angular-image__badge {
-      font-size: 0.8rem;
-      padding: .15rem .8rem;
-    }
-
-  }
-
-  @media screen and (max-width: $screen-xsmall) {
-    &__details {
+  &--preview {
+    #{$b}__trainer-container {
       flex-direction: column;
-      align-items: center;
     }
 
-    &__trainer {
-      margin: 25px 0;
+    #{$b}__trainer {
+      margin-bottom: 35px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
